syntax = "proto3";

package lib;


service Sensor {
  rpc PutEvent (Event) returns (EventResponse);
}

message Event {
  string volcano_name = 1;
  bytes uuid_sensor = 2;
  bytes uuid_datapoint = 3;
  int64 x = 4;
  int64 y = 5;
  int64 z = 6;
  uint64 data_timestamp = 7;
  // checksum?
}

message EventResponse {
  string status = 1;
}
